--- a/style.css
+++ b/style.css
@@ -215,189 +215,6 @@ body {
   position: fixed;
 }
 
-.d-none {
-  display: none;
-}
-
-@media (min-width: 576px) {
-  .d-xs-none {
-    display: none;
-  }
-}
-
-@media (min-width: 768px) {
-  .d-md-none {
-    display: none;
-  }
-}
-
-@media (min-width: 992px) {
-  .d-lg-none {
-    display: none;
-  }
-}
-
-@media (min-width: 1024px) {
-  .d-xl-none {
-    display: none;
-  }
-}
-
-.d-block {
-  display: block;
-}
-
-@media (min-width: 576px) {
-  .d-xs-block {
-    display: block;
-  }
-}
-
-@media (min-width: 768px) {
-  .d-md-block {
-    display: block;
-  }
-}
-
-@media (min-width: 992px) {
-  .d-lg-block {
-    display: block;
-  }
-}
-
-@media (min-width: 1024px) {
-  .d-xl-block {
-    display: block;
-  }
-}
-
-.d-inline {
-  display: inline;
-}
-
-@media (min-width: 576px) {
-  .d-xs-inline {
-    display: inline;
-  }
-}
-
-@media (min-width: 768px) {
-  .d-md-inline {
-    display: inline;
-  }
-}
-
-@media (min-width: 992px) {
-  .d-lg-inline {
-    display: inline;
-  }
-}
-
-@media (min-width: 1024px) {
-  .d-xl-inline {
-    display: inline;
-  }
-}
-
-.d-inline-block {
-  display: inline-block;
-}
-
-@media (min-width: 576px) {
-  .d-xs-inline-block {
-    display: inline-block;
-  }
-}
-
-@media (min-width: 768px) {
-  .d-md-inline-block {
-    display: inline-block;
-  }
-}
-
-@media (min-width: 992px) {
-  .d-lg-inline-block {
-    display: inline-block;
-  }
-}
-
-@media (min-width: 1024px) {
-  .d-xl-inline-block {
-    display: inline-block;
-  }
-}
-
-.d-flex {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-}
-
-@media (min-width: 576px) {
-  .d-xs-flex {
-    display: -webkit-box;
-    display: -ms-flexbox;
-    display: flex;
-  }
-}
-
-@media (min-width: 768px) {
-  .d-md-flex {
-    display: -webkit-box;
-    display: -ms-flexbox;
-    display: flex;
-  }
-}
-
-@media (min-width: 992px) {
-  .d-lg-flex {
-    display: -webkit-box;
-    display: -ms-flexbox;
-    display: flex;
-  }
-}
-
-@media (min-width: 1024px) {
-  .d-xl-flex {
-    display: -webkit-box;
-    display: -ms-flexbox;
-    display: flex;
-  }
-}
-
-.d-grid {
-  display: -ms-grid;
-  display: grid;
-}
-
-@media (min-width: 576px) {
-  .d-xs-grid {
-    display: -ms-grid;
-    display: grid;
-  }
-}
-
-@media (min-width: 768px) {
-  .d-md-grid {
-    display: -ms-grid;
-    display: grid;
-  }
-}
-
-@media (min-width: 992px) {
-  .d-lg-grid {
-    display: -ms-grid;
-    display: grid;
-  }
-}
-
-@media (min-width: 1024px) {
-  .d-xl-grid {
-    display: -ms-grid;
-    display: grid;
-  }
-}
-
 .justify-content-start {
   -webkit-box-pack: start;
       -ms-flex-pack: start;
@@ -497,7 +314,7 @@ body {
   }
 }
 
-@media (min-width: 1024px) {
+@media (min-width: 1200px) {
   .flex-xl-row {
     -webkit-box-orient: horizontal;
     -webkit-box-direction: normal;
@@ -540,7 +357,7 @@ body {
   }
 }
 
-@media (min-width: 1024px) {
+@media (min-width: 1200px) {
   .flex-xl-column {
     -webkit-box-orient: vertical;
     -webkit-box-direction: normal;
@@ -583,7 +400,7 @@ body {
   }
 }
 
-@media (min-width: 1024px) {
+@media (min-width: 1200px) {
   .flex-xl-row-reverse {
     -webkit-box-orient: horizontal;
     -webkit-box-direction: reverse;
@@ -626,7 +443,7 @@ body {
   }
 }
 
-@media (min-width: 1024px) {
+@media (min-width: 1200px) {
   .flex-xl-column-reverse {
     -webkit-box-orient: vertical;
     -webkit-box-direction: reverse;
@@ -661,7 +478,7 @@ body {
   }
 }
 
-@media (min-width: 1024px) {
+@media (min-width: 1200px) {
   .flex-xl-wrap {
     -ms-flex-wrap: wrap;
         flex-wrap: wrap;
@@ -694,7 +511,7 @@ body {
   }
 }
 
-@media (min-width: 1024px) {
+@media (min-width: 1200px) {
   .flex-xl-nowrap {
     -ms-flex-wrap: nowrap;
         flex-wrap: nowrap;
@@ -788,6 +605,14 @@ b {
   font-weight: bold;
 }
 
+.pages .details-page {
+  display: none;
+}
+
+.pages.details .details-page {
+  display: block;
+}
+
 @media (min-width: 576px) {
   .d-none.d-xs-block {
     display: block;
@@ -810,6 +635,10 @@ b {
 
 .btn:hover {
   opacity: 0.9;
+}
+
+.w-100 {
+  width: 100%;
 }
 
 .flex-1 {
@@ -886,7 +715,7 @@ b {
   }
 }
 
-@media (min-width: 1024px) {
+@media (min-width: 1200px) {
   .screen {
     width: 1140px;
   }
@@ -925,16 +754,71 @@ b {
   -webkit-box-pack: justify;
       -ms-flex-pack: justify;
           justify-content: space-between;
+  border-radius: 5px;
 }
 
-.search-form .search-field {
+.search-form input[placeholder] {
+  text-overflow: ellipsis;
+}
+
+.search-form > * {
+  padding: 30px 15px;
+  background-color: #fff;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+
+.search-form > *:first-child {
+  border-radius: 5px 0 0 5px;
+}
+
+.search-form > *:last-child {
+  border-radius: 0 5px 5px 0;
+}
+
+.search-form > * .has-icon {
+  position: relative;
+  padding-left: 30px;
+}
+
+.search-form > * .has-icon::before {
+  content: '';
+  position: absolute;
+  left: 0;
+  top: 0;
+  width: 24px;
+  height: 24px;
+  background-size: cover;
+}
+
+.search-form > * .has-icon.search-field-label::before {
+  background-image: url(assets/images/magnify.png);
+  top: 2px;
+}
+
+.search-form > * .has-icon.search-location-label::before {
+  background-image: url(assets/images/map-marker.png);
+  top: -2px;
+}
+
+.search-form .search-field-label {
   margin-right: 50px;
 }
 
 @media (min-width: 768px) {
-  .search-form .search-field {
+  .search-form .search-field-label {
     margin-right: 0;
   }
+}
+
+.search-form .type-label-text {
+  font-weight: bold;
+  font-size: 0.8rem;
+  color: #000;
 }
 
 @media (min-width: 768px) {
@@ -943,29 +827,51 @@ b {
     display: grid;
     -ms-grid-columns: (1fr)[3];
         grid-template-columns: repeat(3, 1fr);
-    gap: 1px;
+    gap: 2px;
   }
 }
 
 .card {
   border-radius: 5px;
-  -webkit-box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
-          box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
+  -webkit-box-shadow: 0 2px 2px 0 rgba(0, 0, 0, 0.2);
+          box-shadow: 0 2px 2px 0 rgba(0, 0, 0, 0.2);
   padding: 30px;
 }
 
-.card .clickable {
+.card.clickable {
+  cursor: pointer;
   -webkit-transition: 0.3s;
   transition: 0.3s;
 }
 
-.card .clickable:hover {
+.card.clickable:hover {
   -webkit-box-shadow: 0 8px 16px 0 rgba(0, 0, 0, 0.2);
           box-shadow: 0 8px 16px 0 rgba(0, 0, 0, 0.2);
 }
 
+@media (min-width: 576px) {
+  .articles-wrap {
+    display: -ms-grid;
+    display: grid;
+    -ms-grid-columns: (1fr)[2];
+        grid-template-columns: repeat(2, 1fr);
+    gap: 15px;
+  }
+}
+
+@media (min-width: 992px) {
+  .articles-wrap {
+    -ms-grid-columns: (1fr)[3];
+        grid-template-columns: repeat(3, 1fr);
+  }
+}
+
 .job-list-header {
   margin-bottom: 30px;
+  border-radius: 5px;
+  -webkit-box-shadow: 0 2px 2px 0 rgba(0, 0, 0, 0.2);
+          box-shadow: 0 2px 2px 0 rgba(0, 0, 0, 0.2);
+  background-color: #f5f6f8;
 }
 
 .job-list-card {
@@ -1105,7 +1011,198 @@ b {
   background-color: #fff;
 }
 
+.themed .card.secondary {
+  background-color: #f5f6f8;
+}
+
 .themed.dark .card {
   background-color: #18202d;
+}
+
+.themed.dark .card.secondary {
+  background-color: #131722;
+}
+
+.d-none {
+  display: none;
+}
+
+@media (min-width: 576px) {
+  .d-xs-none {
+    display: none;
+  }
+}
+
+@media (min-width: 768px) {
+  .d-md-none {
+    display: none;
+  }
+}
+
+@media (min-width: 992px) {
+  .d-lg-none {
+    display: none;
+  }
+}
+
+@media (min-width: 1200px) {
+  .d-xl-none {
+    display: none;
+  }
+}
+
+.d-block {
+  display: block;
+}
+
+@media (min-width: 576px) {
+  .d-xs-block {
+    display: block;
+  }
+}
+
+@media (min-width: 768px) {
+  .d-md-block {
+    display: block;
+  }
+}
+
+@media (min-width: 992px) {
+  .d-lg-block {
+    display: block;
+  }
+}
+
+@media (min-width: 1200px) {
+  .d-xl-block {
+    display: block;
+  }
+}
+
+.d-inline {
+  display: inline;
+}
+
+@media (min-width: 576px) {
+  .d-xs-inline {
+    display: inline;
+  }
+}
+
+@media (min-width: 768px) {
+  .d-md-inline {
+    display: inline;
+  }
+}
+
+@media (min-width: 992px) {
+  .d-lg-inline {
+    display: inline;
+  }
+}
+
+@media (min-width: 1200px) {
+  .d-xl-inline {
+    display: inline;
+  }
+}
+
+.d-inline-block {
+  display: inline-block;
+}
+
+@media (min-width: 576px) {
+  .d-xs-inline-block {
+    display: inline-block;
+  }
+}
+
+@media (min-width: 768px) {
+  .d-md-inline-block {
+    display: inline-block;
+  }
+}
+
+@media (min-width: 992px) {
+  .d-lg-inline-block {
+    display: inline-block;
+  }
+}
+
+@media (min-width: 1200px) {
+  .d-xl-inline-block {
+    display: inline-block;
+  }
+}
+
+.d-flex {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+}
+
+@media (min-width: 576px) {
+  .d-xs-flex {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+  }
+}
+
+@media (min-width: 768px) {
+  .d-md-flex {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+  }
+}
+
+@media (min-width: 992px) {
+  .d-lg-flex {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+  }
+}
+
+@media (min-width: 1200px) {
+  .d-xl-flex {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+  }
+}
+
+.d-grid {
+  display: -ms-grid;
+  display: grid;
+}
+
+@media (min-width: 576px) {
+  .d-xs-grid {
+    display: -ms-grid;
+    display: grid;
+  }
+}
+
+@media (min-width: 768px) {
+  .d-md-grid {
+    display: -ms-grid;
+    display: grid;
+  }
+}
+
+@media (min-width: 992px) {
+  .d-lg-grid {
+    display: -ms-grid;
+    display: grid;
+  }
+}
+
+@media (min-width: 1200px) {
+  .d-xl-grid {
+    display: -ms-grid;
+    display: grid;
+  }
 }
 /*# sourceMappingURL=style.css.map */
