--- a/style.css
+++ b/style.css
@@ -881,7 +881,13 @@ b {
 }
 
 .job-list-card h3 {
-  font-size: 2rem;
+  font-size: 1.5rem;
+}
+
+@media (min-width: 992px) {
+  .job-list-card h3 {
+    font-size: 1rem;
+  }
 }
 
 .job-list-card .inner {
@@ -906,6 +912,18 @@ b {
   font-size: 0.95rem;
 }
 
+@media (min-width: 992px) {
+  .job-list-card .location {
+    font-size: 0.8rem;
+  }
+}
+
+@media (min-width: 992px) {
+  .job-list-card {
+    font-size: 0.8rem;
+  }
+}
+
 .more-jobs-wrap {
   padding: 20px 0;
 }
@@ -913,6 +931,20 @@ b {
 .more-jobs-wrap .btn {
   padding: 20px 30px;
   font-size: 22px;
+}
+
+.more-jobs-wrap .loader-wrap {
+  display: none;
+}
+
+.more-jobs-wrap.loading .btn {
+  display: none;
+}
+
+.more-jobs-wrap.loading .loader-wrap {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
 }
 
 .job-details {
