implement fetch data from api and display result

--- a/style.css
+++ b/style.css
@@ -918,6 +918,10 @@ b {
   }
 }
 
+.job-list-card .card.clickable {
+  height: 100%;
+}
+
 @media (min-width: 992px) {
   .job-list-card {
     font-size: 0.8rem;
